# UV-Mapping

./: .gitignore  CMakeLists.txt  LICENSE  README.md  imgui.ini  main.cpp
include/: Mesh.h  Renderer.h  Shader.h  Texture.h
shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Mesh.cpp  Renderer.cpp  Shader.cpp  Texture.cpp
